@startuml

title __SERVICE's Class Diagram__\n

  package com.epam.training {
    package com.epam.training.stock {
      package com.epam.training.stock.service {
        class StockSchedulingService {
            - interval : int
            {static} - log : Logger
            + StockSchedulingService()
            - addSomeStocks()
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.stock {
      package com.epam.training.stock.service {
        class StockService {
            + StockService()
            + increaseQuantityOfStock()
            + createStock()
            - readStock()
            + readStockByStockId()
        }
      }
    }
  }
  

  StockSchedulingService o-- StockService : stockService
  StockService o-- StockRepository : stockRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
